k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastify-server
  labels:
    app: fastify-server
spec:
  selector:
    app: fastify-server
  type: ClusterIP
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastify-server
  name: fastify-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastify-server
  template:
    metadata:
      labels:
        app: fastify-server
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: env-vars
        - name: CONTAINER
          valueFrom:
            configMapKeyRef:
              key: CONTAINER
              name: env-vars
        image: xeusteerapat/fastify-server:lastest
        name: fastify-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
